# agentic-app-quickstart

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  script.sh  setup.sh
.github/workflows/: security.yml
agentic_app_quickstart/: .dockerignore  Dockerfile
agentic_app_quickstart/examples/: helpers.py
agentic_app_quickstart/examples/code/: 01_hello_world.py  02_function_calling.py  03_simple_memory.py  04_guardrails.py  05_handoffs.py
agentic_app_quickstart/examples/notebooks/: 01_hello_world.py
agentic_app_quickstart/examples/phoenix/: 01_handoffs_tracing.py  02_gradio.py  02_gradio_simple.py  03_streamlit.py
agentic_app_quickstart/examples/week_1/: 01_hello_world.py  02_function_calling.py  04_guardrails.py
agentic_app_quickstart/examples/week_2/: 01_handoffs_tracing.py  03_streamlit.py
agentic_app_quickstart/examples/week_3/: 01_llm_as_judge_toxicity.py
agentic_app_quickstart/week_1/: README.md
agentic_app_quickstart/week_1/solution/: README.md
agentic_app_quickstart/week_1/solution/data/: employee_data.csv  sample_sales.csv  weather_data.csv
agentic_app_quickstart/week_2/: README.md
agentic_app_quickstart/week_3/: README.md
notebooks/: 01_llm_as_judge.py
scripts/: check_env_example.py  check_env_secrets.py  check_env_vars.py
