[project]
name = "agentic-app-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.14.16",
    "openai>=1.99.1",
    "openai-agents>=0.2.4",
    "tweepy>=4.16.0",
]

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_app_quickstart"]
